--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -16,7 +16,7 @@ html {
 }
 body {
   font-family: $font-family;
-  background: $color-bg;
+  background: $color-sidebar;
   color: $color-text;
   line-height: $line-height-normal;
   overflow-x: hidden;
